RESTfulCRUD app/service-restfulcrud.yaml
apiVersion: v1
kind: Service
metadata:
  name: restfulcrud-services
  namespace: m
spec:
  selector:
    app: restfulcrud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
